# Limbi

./: .env.example  .gitignore  README.md  limbi_mcp_server.py  main.py  middleware.py  orchestrator.py  payload_parser.py  pyproject.toml  requirements.txt  setup.py  vector_store.py
.github/: SECRETS.md
.github/workflows/: publish.yml
agents/: __init__.py  agriculture_agent.py  analytics_agent.py  api_gateway_agent.py  approval_agent.py  auth_agent.py  aws_agent.py  azure_agent.py  blockchain_agent.py  browser_agent.py  cicd_agent.py  code_agent.py  comms_agent.py  compliance_agent.py  context_memory_agent.py  cost_agent.py  critic_agent.py  customer_success_agent.py  customer_support_agent.py  data_agent.py  database_agent.py  design_agent.py  devops_agent.py  docs_agent.py  documentation_agent.py  ecommerce_agent.py  education_agent.py  energy_agent.py  evaluation_agent.py  feature_flag_agent.py  feedback_agent.py  file_agent.py  finance_agent.py  gcp_agent.py  git_agent.py  government_agent.py  healthcare_agent.py  hospitality_agent.py  hr_agent.py  incident_agent.py  (+49 more)
limbi/: __init__.py  __main__.py  agent_contracts.py  audit_log.py  cli.py  evaluation.py  llm_provider.py  mcp_server.py  orchestrator.py  permissions.py  runtime_metrics.py  tracing.py  vector_store.py  workspace.py  workspace_trust.py
limbi-vscode/: README.md  package.json
limbi-vscode/media/: main.css  main.js
limbi-vscode/src/: extension.js
limbi/agents/: __init__.py  agriculture_agent.py  analytics_agent.py  api_gateway_agent.py  approval_agent.py  auth_agent.py  aws_agent.py  azure_agent.py  blockchain_agent.py  browser_agent.py  cicd_agent.py  code_agent.py  comms_agent.py  compliance_agent.py  context_memory_agent.py  cost_agent.py  critic_agent.py  customer_success_agent.py  customer_support_agent.py  data_agent.py  database_agent.py  design_agent.py  devops_agent.py  docs_agent.py  documentation_agent.py  ecommerce_agent.py  education_agent.py  energy_agent.py  evaluation_agent.py  feature_flag_agent.py  feedback_agent.py  file_agent.py  finance_agent.py  (+56 more)
(+5 files in other folders)
