[build-system]
requires = ["setuptools>=58.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limbi"
version = "1.5.2"
description = "Omni-Agent Orchestration Platform — 87 specialised AI agents, any LLM provider."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Sayon Manna"},
]
keywords = [
    "ai", "agents", "orchestrator", "llm", "multi-agent",
    "devops", "automation", "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.2"]
anthropic = ["langchain-anthropic>=0.2"]
google = ["langchain-google-genai>=2.0"]
groq = ["langchain-groq>=0.2"]
mistral = ["langchain-mistralai>=0.2"]
cohere = ["langchain-cohere>=0.3"]
together = ["langchain-openai>=0.2"]
azure = ["langchain-openai>=0.2"]
rag = ["chromadb>=0.5"]
aws = ["boto3>=1.34"]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "gradio>=4.0",
    "httpx>=0.27",
    "huggingface-hub>=0.24",
]
all = [
    "limbi[openai,anthropic,google,groq,mistral,cohere,rag,aws,server]",
]

[project.scripts]
limbi = "limbi.cli:main"
limbi-mcp = "limbi.mcp_server:main_loop"

[project.urls]
Homepage = "https://github.com/sayonmanna/limbi"
Repository = "https://github.com/sayonmanna/limbi"

[tool.setuptools.packages.find]
include = ["limbi*"]

[tool.setuptools.package-data]
limbi = ["py.typed"]
